--- a/project.cfg
+++ b/project.cfg
@@ -1,19 +1,30 @@
-; Lines beginning with a semicolon are "comment lines".
-; This format can be parsed using Python `configparser` module.
+# Lines beginning with a hashmark (#) are "comment lines".
+# This format can be parsed using Python `configparser` module.
 
 [Locations]
-; Specify a path to use for rsync. Log files and gzipped tweets will
-; be sent to this location. If the location is a path on a remote machine,
-; then the crontab user must be able to ssh to that machine without a 
-; password. So use your private/public key.
+# Specify a path to use for rsync. Log files and gzipped tweets will
+# be sent to this location. If the location is a path on a remote machine,
+# then the crontab user must be able to ssh to that machine without a 
+# password. So use your private/public key.
 BACKUP_PATH = username@hostname:path/to/backup/
 
 [Prefixes]
-; Directories beginning with MONGO_PREFIX are backuped via rsync as well.
-; Intended use case is to use mongodump and rename the backup as something
-; like `mongodb_2014-09-15` within the `data` directory.
+# Directories beginning with MONGO_PREFIX are backuped via rsync as well.
+# Intended use case is to use mongodump and rename the backup as something
+# like `mongodb_2014-09-15` within the `data` directory.
 MONGO_PREFIX = mongo
 
+[Twitter]
+# Keys for Twitter API access.
+# Go to http://dev.twitter.com and create an app.
+# The consumer key and secret will be generated for you afterwards.
+consumer_key = 
+consumer_secret = 
+
+# After the step above, you will be redirected to your app's page.
+# Create an access token under the the "Your access token" section
+access_token = 
+access_token_secret = 
 
 
 
