--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,12 @@ zipper.log
 rsync.log
 
 # Downloaded Tiger data
-tiger/tl_*
+tiger/tl_*.prj
+tiger/tl_*.shp
+tiger/tl_*.shx
+tiger/tl_*.dbf
+tiger/tl_*.xml
+tiger/tl_*.zip
 tiger/TGRSHP2014_TechDoc.pdf
 
 # Generated output
