Update with comments.

--- a/scripts/populate/config.ini
+++ b/scripts/populate/config.ini
@@ -1,5 +1,11 @@
 [PATHS]
+# Where to copy source files from the remote path.
 tempdir = 
+
+# A locally accessible path (mounted) that we can run glob on.
+# This will be used to obtain a list of source files.
 sources = 
+
+# The path that rsync uses to copy sources from.
 remote = 
 
